--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "08b72f1b",
+   "id": "d009b30c",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e1b4b4fb",
+   "id": "073c62ab",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6efa1a1",
+   "id": "9f783d1a",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "907f8c15",
+   "id": "62ad059a",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb00df2d",
+   "id": "63ef0fec",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4c38a67a",
+   "id": "07ac0d9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0c40d5d3",
+   "id": "3df2cf75",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0f2c7382",
+   "id": "b3baf420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1f871538",
+   "id": "dd5378e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "32d318d2",
+   "id": "501927b6",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "751fbe46",
+   "id": "dff05c0a",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee803d3f",
+   "id": "1c055e35",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "a704427f",
+   "id": "47bcd1c5",
    "metadata": {},
    "outputs": [
     {
@@ -396,16 +396,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "e8e86407",
+   "execution_count": 84,
+   "id": "a5f59fec",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7ae5400> rouge auto\n",
-      "<__main__.Voiture object at 0x7fbab7ae53d0> bleu\n"
+      "<__main__.Voiture object at 0x7fbab7ae5490> rouge auto\n",
+      "<__main__.Voiture object at 0x7fbab7ae5b80> bleu manuelle\n"
      ]
     }
    ],
@@ -419,13 +419,13 @@
     "print(clio, clio.couleur, clio.boite)\n",
     "\n",
     "megane = Voiture(\"bleu\", \"manuelle\")\n",
-    "print(megane, megane.couleur)"
+    "print(megane, megane.couleur, megane.boite)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9105f26b",
+   "id": "17cd60c8",
    "metadata": {},
    "outputs": [],
    "source": []
