--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "10e8d258",
+   "id": "94a7dccf",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8d291bae",
+   "id": "4ad31014",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a6628fe",
+   "id": "789c8fd7",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "624a57af",
+   "id": "31cfde09",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a678a77",
+   "id": "90f61af7",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bf177170",
+   "id": "b6897015",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "656cb46f",
+   "id": "f129eb76",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "7225d32d",
+   "id": "b88aaf1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "41a0b8fe",
+   "id": "98e288c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "2692a154",
+   "id": "ac0871ad",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "64235c8d",
+   "id": "841e420a",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e126d7a2",
+   "id": "7f4f88b8",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "2c15c4ef",
+   "id": "af9f940c",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "cb88d272",
+   "id": "0d9cbc2f",
    "metadata": {},
    "outputs": [
     {
@@ -424,8 +424,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "bc4aa4ed",
+   "execution_count": 90,
+   "id": "6f6e0939",
    "metadata": {
     "scrolled": false
    },
@@ -433,22 +433,22 @@
     {
      "data": {
       "text/plain": [
-       "'auto'"
+       "[('boite', 'auto'), ('couleur', 'rouge')]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[getattr(clio, \"boite\")"
+    "[(attr, getattr(clio, attr)) for attr in dir(clio) if not attr.startswith(\"__\")]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f4f319e",
+   "id": "5eb9d811",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cd6f78f",
+   "id": "12cb9483",
    "metadata": {},
    "outputs": [],
    "source": []
