--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "94a7dccf",
+   "id": "8740dba9",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4ad31014",
+   "id": "fa8de888",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "789c8fd7",
+   "id": "43252016",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "31cfde09",
+   "id": "f0ac0f47",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90f61af7",
+   "id": "fa68b063",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b6897015",
+   "id": "04039404",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f129eb76",
+   "id": "976d8865",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b88aaf1f",
+   "id": "62bc3bac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "98e288c2",
+   "id": "313e8e21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "ac0871ad",
+   "id": "17a19cc7",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "841e420a",
+   "id": "2e51f79d",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f4f88b8",
+   "id": "8b858337",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "af9f940c",
+   "id": "a437c0b9",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "0d9cbc2f",
+   "id": "247634c2",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "6f6e0939",
+   "id": "8901b4c0",
    "metadata": {
     "scrolled": false
    },
@@ -442,13 +442,19 @@
     }
    ],
    "source": [
+    "res = []\n",
+    "for attr in dir(clio):\n",
+    "    res.append((attr, getattr(clio, attr)))\n",
+    "\n",
+    "###\n",
+    "\n",
     "[(attr, getattr(clio, attr)) for attr in dir(clio) if not attr.startswith(\"__\")]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eb9d811",
+   "id": "71d55a2f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -456,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12cb9483",
+   "id": "ea369c75",
    "metadata": {},
    "outputs": [],
    "source": []
