--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8740dba9",
+   "id": "fda77362",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fa8de888",
+   "id": "ea9fe1cb",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43252016",
+   "id": "a22bc112",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f0ac0f47",
+   "id": "1783432e",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa68b063",
+   "id": "24b6ad47",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "04039404",
+   "id": "c5a98164",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "976d8865",
+   "id": "734e77dd",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "62bc3bac",
+   "id": "88929fdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "313e8e21",
+   "id": "75c73979",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "17a19cc7",
+   "id": "5d7c2f9a",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2e51f79d",
+   "id": "df6badc2",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b858337",
+   "id": "15425c4c",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "a437c0b9",
+   "id": "eee43857",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "247634c2",
+   "id": "23328d68",
    "metadata": {},
    "outputs": [
     {
@@ -424,19 +424,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "8901b4c0",
+   "execution_count": 92,
+   "id": "33986e99",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('boite', 'auto'), ('couleur', 'rouge')]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[('boite', 'auto'), ('couleur', 'rouge')]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,17 +451,17 @@
    "source": [
     "res = []\n",
     "for attr in dir(clio):\n",
-    "    res.append((attr, getattr(clio, attr)))\n",
-    "\n",
+    "    if not attr.startswith(\"__\") and not attr.endswith(\"__\") :\n",
+    "        res.append((attr, getattr(clio, attr)))\n",
+    "print(res)\n",
     "###\n",
-    "\n",
     "[(attr, getattr(clio, attr)) for attr in dir(clio) if not attr.startswith(\"__\")]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d55a2f",
+   "id": "ad64a8ed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -462,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea369c75",
+   "id": "80783fb5",
    "metadata": {},
    "outputs": [],
    "source": []
