--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3d529d41",
+   "id": "658fe0da",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "62f4bd16",
+   "id": "d61d7889",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "364784fe",
+   "id": "678404ee",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "38a04a0b",
+   "id": "39906974",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "487bfa92",
+   "id": "3a628df1",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c177ab52",
+   "id": "113008df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "602f4bf2",
+   "id": "ebc60171",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "11d63458",
+   "id": "d4a16e37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2668b904",
+   "id": "3cdae5f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b6d2036a",
+   "id": "29356e87",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b6bdd2fa",
+   "id": "37bb7f91",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30040222",
+   "id": "98952cdf",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "1eae1aeb",
+   "id": "63d29f1d",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "cf45d964",
+   "id": "c604f2e7",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "fa94abd7",
+   "id": "b3b6f6f0",
    "metadata": {
     "scrolled": false
    },
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "b5d94933",
+   "id": "ddb56e85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "369cec7a",
+   "id": "e0cb6e5a",
    "metadata": {},
    "outputs": [
     {
@@ -508,13 +508,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 98,
+   "id": "fc3a74a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'couleur': 'rouge', 'boite': 'auto'}"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars(clio)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0182231c",
+   "id": "d0d11756",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "va"
-   ]
+   "source": []
   }
  ],
  "metadata": {
