--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "658fe0da",
+   "id": "825e0b3b",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d61d7889",
+   "id": "cfa5e570",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "678404ee",
+   "id": "dae07f9c",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "39906974",
+   "id": "6ec3d0cf",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a628df1",
+   "id": "9cf56957",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "113008df",
+   "id": "8d4c8545",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ebc60171",
+   "id": "74372b3b",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d4a16e37",
+   "id": "5f5ab453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3cdae5f5",
+   "id": "db1c5716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "29356e87",
+   "id": "d36ca067",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "37bb7f91",
+   "id": "ec6defe1",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98952cdf",
+   "id": "cd33cc7e",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "63d29f1d",
+   "id": "3cb317bc",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "c604f2e7",
+   "id": "1d177922",
    "metadata": {},
    "outputs": [
     {
@@ -411,9 +411,10 @@
    ],
    "source": [
     "class Voiture:\n",
-    "    def __init__(self, la_couleur_que_je_veux, type_de_boite):\n",
+    "    def __init__(self, la_couleur_que_je_veux, type_de_boite, modele_de_la_voiture):\n",
     "        self.couleur = la_couleur_que_je_veux\n",
     "        self.boite = type_de_boite\n",
+    "        \n",
     "        \n",
     "clio = Voiture(\"rouge\", \"auto\")\n",
     "print(clio, clio.couleur, clio.boite)\n",
@@ -425,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b3b6f6f0",
+   "id": "fe147bca",
    "metadata": {
     "scrolled": false
    },
@@ -461,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ddb56e85",
+   "id": "5e1dce99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "e0cb6e5a",
+   "id": "0e64da2b",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "fc3a74a0",
+   "id": "f097f013",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0d11756",
+   "id": "3617e614",
    "metadata": {},
    "outputs": [],
    "source": []
