--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "825e0b3b",
+   "id": "68e20f68",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cfa5e570",
+   "id": "8f303916",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae07f9c",
+   "id": "1e345cc1",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6ec3d0cf",
+   "id": "ee0a7d94",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf56957",
+   "id": "841f7467",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8d4c8545",
+   "id": "c7f22c59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "74372b3b",
+   "id": "665173ba",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "5f5ab453",
+   "id": "1624acb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "db1c5716",
+   "id": "6a20338a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d36ca067",
+   "id": "ecfcddca",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ec6defe1",
+   "id": "df2f53db",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd33cc7e",
+   "id": "9ca381e0",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "3cb317bc",
+   "id": "c16f277a",
    "metadata": {},
    "outputs": [
     {
@@ -396,37 +396,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "1d177922",
+   "execution_count": 101,
+   "id": "19838564",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7ae5490> rouge auto\n",
-      "<__main__.Voiture object at 0x7fbab7ae5b80> bleu manuelle\n"
+      "<__main__.Voiture object at 0x7fbab7b3bee0> rouge auto clio\n",
+      "<__main__.Voiture object at 0x7fbab7b3bee0> rouge auto megane\n"
      ]
     }
    ],
    "source": [
     "class Voiture:\n",
     "    def __init__(self, la_couleur_que_je_veux, type_de_boite, modele_de_la_voiture):\n",
+    "        self.modele = modele_de_la_voiture\n",
     "        self.couleur = la_couleur_que_je_veux\n",
     "        self.boite = type_de_boite\n",
     "        \n",
-    "        \n",
-    "clio = Voiture(\"rouge\", \"auto\")\n",
-    "print(clio, clio.couleur, clio.boite)\n",
+    "voiture1 = Voiture(\"rouge\", \"auto\", \"clio\")\n",
+    "print(voiture1, voiture1.couleur, voiture1.boite, voiture1.modele)\n",
     "\n",
-    "megane = Voiture(\"bleu\", \"manuelle\")\n",
-    "print(megane, megane.couleur, megane.boite)"
+    "voiture2 = Voiture(\"bleu\", \"manuelle\", \"megane\")\n",
+    "print(voiture1, voiture1.couleur, voiture1.boite, voiture2.modele)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "fe147bca",
+   "id": "1455ac49",
    "metadata": {
     "scrolled": false
    },
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "5e1dce99",
+   "id": "e86c2476",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "0e64da2b",
+   "id": "85a1b364",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "f097f013",
+   "id": "c69fc76a",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3617e614",
+   "id": "514be633",
    "metadata": {},
    "outputs": [],
    "source": []
