--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "68e20f68",
+   "id": "fafeecdb",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8f303916",
+   "id": "bbb91cdc",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e345cc1",
+   "id": "62555895",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ee0a7d94",
+   "id": "228cc247",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "841f7467",
+   "id": "c9d04bbd",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c7f22c59",
+   "id": "8482a7c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "665173ba",
+   "id": "edf616af",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1624acb1",
+   "id": "c5ad4ae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6a20338a",
+   "id": "d8da5a44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "ecfcddca",
+   "id": "3e0fb01e",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "df2f53db",
+   "id": "039fd971",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ca381e0",
+   "id": "8d02d020",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c16f277a",
+   "id": "d87fc540",
    "metadata": {},
    "outputs": [
     {
@@ -396,27 +396,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "19838564",
+   "execution_count": 106,
+   "id": "00146084",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7b3bee0> rouge auto clio\n",
-      "<__main__.Voiture object at 0x7fbab7b3bee0> rouge auto megane\n"
+      "<__main__.Voiture object at 0x7fbab7b4afd0> rouge auto clio\n",
+      "<__main__.Voiture object at 0x7fbab7b4afd0> rouge auto megane\n"
      ]
     }
    ],
    "source": [
     "class Voiture:\n",
-    "    def __init__(self, la_couleur_que_je_veux, type_de_boite, modele_de_la_voiture):\n",
+    "    def __init__(self, couleur, type_de_boite, modele_de_la_voiture):\n",
     "        self.modele = modele_de_la_voiture\n",
-    "        self.couleur = la_couleur_que_je_veux\n",
     "        self.boite = type_de_boite\n",
+    "        self.couleur = couleur\n",
     "        \n",
-    "voiture1 = Voiture(\"rouge\", \"auto\", \"clio\")\n",
+    "voiture1 = Voiture(type_de_boite=\"auto\", couleur=\"rouge\", modele_de_la_voiture=\"clio\")\n",
     "print(voiture1, voiture1.couleur, voiture1.boite, voiture1.modele)\n",
     "\n",
     "voiture2 = Voiture(\"bleu\", \"manuelle\", \"megane\")\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "1455ac49",
+   "id": "a7454ea2",
    "metadata": {
     "scrolled": false
    },
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "e86c2476",
+   "id": "958bc7c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "85a1b364",
+   "id": "cbd8b5e6",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c69fc76a",
+   "id": "7eaf9db2",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "514be633",
+   "id": "b063735b",
    "metadata": {},
    "outputs": [],
    "source": []
